--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.4.0",
+    "@prisma/client": "^5.22.0",
+    "emoji-picker-react": "^4.12.0",
+    "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "@prisma/client": "^5.22.0"
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,4 +30,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
+  
 }
